cut over to L402 compatible system
